# Project-AGATHA

./: CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE.md  README.md  Relazione.md  agorizer.sh  builder.sh  builderagora.sh  clear.sh  proj.csv
config/: autotuning.conf  autotuningagora.conf  oplist.conf
examples/: compileHomb.sh  compileMatrix.sh  compileNAS.sh  matrixmpi.cpp
src/: agorizer.cpp  matrix.cpp  matrixmpi.cpp  wrapper.cpp  wrapperagora.cpp
